# LabBigInt

./: BigInt.cpp  BigInt.h  CMakeLists.txt  calcBigInt.cpp  classBigInt.cpp  classBigInt.h  main.cpp  operationsBigInt.cpp
tests/: BigInt_test.cpp
